# supersm

./: .clang-format  .drone.yml  CMakeLists.txt  LICENSE  README.md
.forgejo/workflows/: build.yml
.github/: dependabot.yml
.github/workflows/: build.yml  ccpp.yml
debian/: changelog  control  copyright
src/: common.h  file.h  links.h  main.cpp  options.h
src/core/: core.cpp
